date 12-9-217
-- intro.py --
separated colors by color and gray/grey 

-- gradient.py --
added alpha support

-- button.py --
rebuilt style, allows you to have more custom style
added ToggleButton

date 12-8-2017
Move group and pid from Widget to Scene.

BUG has been fix
work around remove

-- simple_games.py --
BUG was introduced at line 423.
updated some images for memory game.

-- point.py --
work around for current bug at line 423

date 12-7-2017
-- widgets.buttons.py --
Has two more button styles. (simple , normal, box)

-- tool.point.py --
Point and Vectors now have tup_cast(), cast()
Point and Vectors now handle more constructor types

-- tool.gradient.py --
fix gradient apply_surface alpha bug
now handles pygame.Color
trims the fat off of list and tuples

-- widgets.textbox.py --
added ghost text

date 12-6-2017
-- tool.gradient.py --
added apply_surface function
update widgets.text.Text now uses apply_surface

-- simple_games.py --
fix intro exit bug
added Memory game
added Puzzle game

-- simple_games.py --
added class QuitScene