@@ -1,1 +1,3 @@
-import PyScene.scene
+from PyScene.scene import *
+from PyScene.widgets import *
+from PyScene.tool import *
