@@ -1,65 +1,65 @@
 import pygame
-from PyScene import scene
-from PyScene.widgets import Button, Text, Textbox
-from PyScene.tool import Point, Vector, gradient
+from PyScene import Scene, Screen, Font
+from PyScene import Button, Text, Textbox
+from PyScene import Point, Vector, gradient
 from random import choice, shuffle
 
 class Quit:
     def event(self, event):
         if event.type == pygame.QUIT:
-            scene.Screen.set_scene = 'QuitScene'
+            Screen.set_scene = 'QuitScene'
         elif event.type == pygame.KEYDOWN:
             if event.key == pygame.K_ESCAPE:
-                scene.Screen.set_scene = 'QuitScene'
+                Screen.set_scene = 'QuitScene'
 
-class QuitScene(scene.Scene):
+class QuitScene(Scene):
     last_scene = None
 
     def __init__(self):
-        scene.Scene.__init__(self)
-        midx, midy = tuple(map(int, (Point(*scene.Screen.size) / 2).tup()))
-        Text(self, "Do you really want to leave ?", midx, midy - 50, scene.Font.basic, 'mediumorchid1')
+        Scene.__init__(self)
+        midx, midy = tuple(map(int, (Point(*Screen.size) / 2).tup()))
+        Text(self, "Do you really want to leave ?", midx, midy - 50, Font.basic, 'mediumorchid1')
         Button(self, 'Yes', (midx - 150, midy, 100, 30), self.push, True, 'red')
         Button(self, 'No', (midx + 50, midy, 100, 30), self.push, False, 'green')
         self.rect = pygame.Rect(midx - 175, midy - 80, 355, 120)
 
     def push(self, button, pydata):
         if pydata:
-            scene.Screen.running = False
+            Screen.running = False
         else:
-            scene.Screen.set_scene = QuitScene.last_scene
+            Screen.set_scene = QuitScene.last_scene
 
     def blit(self, surface):
         if QuitScene.last_scene:
-            scene.Screen.scenes[QuitScene.last_scene].blit(surface)
-            scene.Screen.scenes[QuitScene.last_scene]._blit(surface)
+            Screen.scenes[QuitScene.last_scene].blit(surface)
+            Screen.scenes[QuitScene.last_scene]._blit(surface)
         else:
             surface.fill((40,0,0))
 
         surface.fill(pygame.Color('mediumorchid4'), self.rect)
 
-class Intro(Quit, scene.Scene):
+class Intro(Quit, Scene):
     def __init__(self):
-        scene.Scene.__init__(self)
-        mid = scene.Screen.size[0] / 2
-        Text(self, 'Welcome To Simple Games', mid, 20, scene.Font.basic, 'blue')
-        text = Text(self, 'TicTacToe', mid, 200, scene.Font.basic, 'wheat4')
+        Scene.__init__(self)
+        mid = Screen.size[0] / 2
+        Text(self, 'Welcome To Simple Games', mid, 20, Font.basic, 'blue')
+        text = Text(self, 'TicTacToe', mid, 200, Font.basic, 'wheat4')
         text.set_hilight('burlywood')
         text.set_callback(self.start_game, ('TicTacToe', TicTacToe))
 
-        text = Text(self, 'MasterMind', mid, 250, scene.Font.basic, 'wheat4')
+        text = Text(self, 'MasterMind', mid, 250, Font.basic, 'wheat4')
         text.set_hilight('burlywood')
         text.set_callback(self.start_game, ('MasterMind', MasterMind))
 
-        text = Text(self, 'FloodIt', mid, 300, scene.Font.basic, 'wheat4')
+        text = Text(self, 'FloodIt', mid, 300, Font.basic, 'wheat4')
         text.set_hilight('burlywood')
         text.set_callback(self.start_game, ('FloodIt', FloodIt))
 
-        text = Text(self, 'Memory', mid, 350, scene.Font.basic, 'wheat4')
+        text = Text(self, 'Memory', mid, 350, Font.basic, 'wheat4')
         text.set_hilight('burlywood')
         text.set_callback(self.start_game, ('Memory', Memory))
 
-        text = Text(self, 'Puzzle', mid, 400, scene.Font.basic, 'wheat4')
+        text = Text(self, 'Puzzle', mid, 400, Font.basic, 'wheat4')
         text.set_hilight('burlywood')
         text.set_callback(self.start_game, ('Puzzle', Puzzle))
         self.last_scene = None
@@ -67,34 +67,34 @@ class Intro(Quit, scene.Scene):
     def entrance(self):
         QuitScene.last_scene = 'Intro'
         if self.last_scene:
-            del scene.Screen.scenes[self.last_scene]
+            del Screen.scenes[self.last_scene]
             self.last_scene = None
 
     def start_game(self, text, pydata):
         self.last_scene = pydata[0]
-        scene.Screen.scenes[pydata[0]] = pydata[1]()
-        scene.Screen.set_scene = pydata[0]
+        Screen.scenes[pydata[0]] = pydata[1]()
+        Screen.set_scene = pydata[0]
 
     def blit(self, surface):
         surface.fill((0,0,30))
 
-class TicTacToe(Quit, scene.Scene):
+class TicTacToe(Quit, Scene):
     def __init__(self):
-        scene.Scene.__init__(self)
-        mid = scene.Screen.size[0] / 2
-        Text(self, 'TicTacToe', mid, 20, scene.Font.basic, 'blue')
+        Scene.__init__(self)
+        mid = Screen.size[0] / 2
+        Text(self, 'TicTacToe', mid, 20, Font.basic, 'blue')
         button = Button(self, 'Back', (10,10,100,30), self.push_back)
         self.board = ['','','' ,'','','' ,'','','']
         self.buttons = []
         for i in range(9):
-            x = int((i % 3) * 55 + scene.Screen.size[0] / 2 - (55 + 55 / 2))
+            x = int((i % 3) * 55 + Screen.size[0] / 2 - (55 + 55 / 2))
             y = int(i / 3) * 55 + 200
             self.buttons.append(Button(self, '', (x, y, 50, 50), self.push, i))
 
-        self.wins_text = Text(self, 'Wins: 0', 100, 100, scene.Font.basic, 'green')
-        self.cats_text = Text(self, 'Cats: 0', mid, 100, scene.Font.basic, 'blue')
-        x = scene.Screen.size[0] - 150
-        self.lost_text = Text(self, 'Lost: 0', x, 100, scene.Font.basic, 'red')
+        self.wins_text = Text(self, 'Wins: 0', 100, 100, Font.basic, 'green')
+        self.cats_text = Text(self, 'Cats: 0', mid, 100, Font.basic, 'blue')
+        x = Screen.size[0] - 150
+        self.lost_text = Text(self, 'Lost: 0', x, 100, Font.basic, 'red')
         self.count = 0
         self.win = 0
         self.lost = 0
@@ -172,7 +172,7 @@ class TicTacToe(Quit, scene.Scene):
             button.text.set_text("")
 
     def push_back(self, button, pydata):
-        scene.Screen.set_scene = 'Intro'
+        Screen.set_scene = 'Intro'
 
     def blit(self, surface):
         surface.fill((0,0,40))
@@ -182,25 +182,25 @@ class Slot:
         self.rect = pygame.Rect(rect)
         self.color = color
 
-class MasterMind(Quit, scene.Scene):
+class MasterMind(Quit, Scene):
     def __init__(self):
-        scene.Scene.__init__(self)
-        mid = scene.Screen.size[0] / 2
-        Text(self, 'MasterMind', mid, 20, scene.Font.basic, 'green')
+        Scene.__init__(self)
+        mid = Screen.size[0] / 2
+        Text(self, 'MasterMind', mid, 20, Font.basic, 'green')
         Button(self, 'Check', (mid - 50, 475, 100, 32), self.check, None, 'green')
         Button(self, 'Back', (10, 10, 100, 30), self.push_back, None, 'green')
         Button(self, 'New Game', (10, 50, 100, 30), self.push_newgame, None, 'green')
         self.colors = ('yellow', 'red', 'blue', 'white', 'wheat4', 'orange', 'green', 'purple')
         self.colors = tuple(map(pygame.Color, self.colors))
         self.picker = [pygame.Rect(150, i * 30 + 180, 40, 20) for i in range(8)]
-        self.outcome = Text(self, "", mid, 550, scene.Font.basic, 'green')
+        self.outcome = Text(self, "", mid, 550, Font.basic, 'green')
         self.push_newgame(None, None)
 
     def entrance(self):
         QuitScene.last_scene = 'MasterMind'
 
     def push_back(self, button, pydata):
-        scene.Screen.set_scene = 'Intro'
+        Screen.set_scene = 'Intro'
 
     def push_newgame(self, button, pydata):
         self.board = []
@@ -320,25 +320,25 @@ class Dot:
 
         return match
 
-class FloodIt(Quit, scene.Scene):
+class FloodIt(Quit, Scene):
     def __init__(self):
-        scene.Scene.__init__(self)
-        mid = scene.Screen.size[0] / 2
-        Text(self, 'FloodIt', mid, 20, scene.Font.basic, 'dodgerblue')
+        Scene.__init__(self)
+        mid = Screen.size[0] / 2
+        Text(self, 'FloodIt', mid, 20, Font.basic, 'dodgerblue')
         Button(self, 'Back', (10,10,100,30), self.push_back, None, 'dodgerblue')
         Button(self, 'New Game', (10,50,100,30), self.push_newgame, None, 'dodgerblue')
         self.colors = tuple(map(pygame.Color,
             ['dodgerblue', 'gold', 'firebrick1', 'darkslateblue',
              'forestgreen', 'darkorange', 'mediumorchid'] ))
 
-        self.turn_text = Text(self, 'Turn: 0', mid, 560, scene.Font.basic, 'wheat4')
+        self.turn_text = Text(self, 'Turn: 0', mid, 560, Font.basic, 'wheat4')
         self.push_newgame(None, None)
 
     def entrance(self):
         QuitScene.last_scene = 'FloodIt'
 
     def push_back(self, button, pydata):
-        scene.Screen.set_scene = 'Intro'
+        Screen.set_scene = 'Intro'
 
     def push_newgame(self, button, pydata):
         self.board = []
@@ -424,7 +424,7 @@ class Card:
             fg = pygame.Color(colors_list[self.item % 4])
             bg = Vector(fg) * 0.5
             grad = gradient.horizontal((fg, bg), 30)
-            letter = scene.Font.basic.render('ABCD'[self.item % 4], 1, (255,255,255))
+            letter = Font.basic.render('ABCD'[self.item % 4], 1, (255,255,255))
             arect = letter.get_rect()
             arect.center = rect.center
             surface.blit(gradient.apply_surface(letter, grad), arect)
@@ -460,14 +460,14 @@ class Card:
 
         return surface
 
-class Memory(Quit, scene.Scene):
+class Memory(Quit, Scene):
     def __init__(self):
-        scene.Scene.__init__(self)
-        mid = scene.Screen.size[0] / 2
-        Text(self, 'Memory', mid, 20, scene.Font.basic, 'mediumorchid1')
+        Scene.__init__(self)
+        mid = Screen.size[0] / 2
+        Text(self, 'Memory', mid, 20, Font.basic, 'mediumorchid1')
         Button(self, 'Back', (10,10,100,30), self.push_back, None, 'mediumorchid1')
         Button(self, 'New Game', (10,50,100,30), self.push_newgame, None, 'mediumorchid1')
-        self.move_text = Text(self, 'Moves: 0', mid, 100, scene.Font.basic, 'mediumorchid1')
+        self.move_text = Text(self, 'Moves: 0', mid, 100, Font.basic, 'mediumorchid1')
 
         self.push_newgame(None, None)
 
@@ -491,7 +491,7 @@ class Memory(Quit, scene.Scene):
         QuitScene.last_scene = 'Memory'
 
     def push_back(self, button, pydata):
-        scene.Screen.set_scene = 'Intro'
+        Screen.set_scene = 'Intro'
 
     def blit(self, surface):
         surface.fill((40,0,40))
@@ -538,16 +538,16 @@ class PuzzleBlock:
         self.number = number
         self.image = pygame.Surface((65, 65))
         self.image.fill((pygame.Color('aquamarine')))
-        surface = scene.Font.basic.render(str(number + 1), 1, (0,0,0))
+        surface = Font.basic.render(str(number + 1), 1, (0,0,0))
         rect = surface.get_rect()
         rect.center = self.image.get_rect().center
         self.image.blit(surface, rect)
 
-class Puzzle(Quit, scene.Scene):
+class Puzzle(Quit, Scene):
     def __init__(self):
-        scene.Scene.__init__(self)
-        mid = scene.Screen.size[0] / 2
-        Text(self, 'Puzzle', mid, 20, scene.Font.basic, 'aquamarine')
+        Scene.__init__(self)
+        mid = Screen.size[0] / 2
+        Text(self, 'Puzzle', mid, 20, Font.basic, 'aquamarine')
         Button(self, 'Back', (10,10,100,30), self.push_back, None, 'aquamarine')
         Button(self, 'New Game', (10,50,100,30), self.push_newgame, None, 'aquamarine')
         self.board = [PuzzleBlock(i) for i in range(15)] + [None]
@@ -560,7 +560,7 @@ class Puzzle(Quit, scene.Scene):
         shuffle(self.board)
 
     def push_back(self, button, pydata):
-        scene.Screen.set_scene = 'Intro'
+        Screen.set_scene = 'Intro'
 
     def blit(self, surface):
         surface.fill(pygame.Color('aquamarine4'))
@@ -596,14 +596,14 @@ class Puzzle(Quit, scene.Scene):
                         setboard(pos - 1)
 
 def main():
-    scene.Screen.center()
-    scene.Screen.init('Simple Games', (800, 600))
-    scene.Font.basic = pygame.font.Font(None, 36)
+    Screen.center()
+    Screen.init('Simple Games', (800, 600))
+    Font.basic = pygame.font.Font(None, 36)
 
-    scene.Screen.scenes['Intro'] = Intro()
-    scene.Screen.scenes['QuitScene'] = QuitScene()
+    Screen.scenes['Intro'] = Intro()
+    Screen.scenes['QuitScene'] = QuitScene()
 
-    scene.Screen.loop('Intro', 30)
+    Screen.loop('Intro', 30)
     pygame.quit()
 
 if __name__ == '__main__':
